# run-remote

./: .gitignore  README.md  pyproject.toml  run-remote-client.py  run-remote.py  sample-config.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml
run_remote/: __main__.py  client.py  command.py  server.py
src/ellipsix/run_remote/: __main__.py  client.py  server.py
src/run_remote/: client.py  command.py  server.py
