[build-system]
requires = ["setuptools >=42", "setuptools_scm[toml] >=3.5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/ellipsix/run_remote/_version.py"

[tool.black]
line-length = 124
target-version = ['py36']  # Lowest version that the project is compatible with
