[metadata]
name = ellipsix.run-remote
author = David Zaslavsky
author_email = diazona@ellipsix.net
description = Small utility to run programs from one host on another
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.8

[options.entry_points]
console_scripts =
    run-remote = ellipsix.run_remote.__main__:main
